--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "personal-portfolio",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://YOUR-USERNAME.github.io/portfolio",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -16,6 +19,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "gh-pages": "^6.1.0",
     "vite": "^5.0.0"
   }
 }
